--- a/doc/锁机制.md
+++ b/doc/锁机制.md
@@ -42,10 +42,10 @@ counter_lock = threading.Lock()
 def increment_counter():
     global counter
     for _ in range(1000000):
-        # 获取锁
+        # 获取锁 with语句会自动释放锁
         with counter_lock:
             counter += 1
-        # with语句会自动释放锁
+        
 
 
 # 创建多个线程
