--- a/doc/可变不可可变.md
+++ b/doc/可变不可可变.md
@@ -1,4 +1,6 @@
 在Python中，对象可以分为可变对象和不可变对象。可变对象是指其值可以被改变的对象，而不可变对象是指其值一旦创建就不能被改变的对象。
+可变类型(mutable):列表,字典./不可变类型(immutable):数字,字符串,元组.
+这里的可变不可变，是指内存中的那块内容（value）是否可以被改变.如果是不可变类型，在对对象本身操作的时候，必须在内存中新申请一块区域(因为老区域不可变)如果是可变类型. 对对象操作的时候,不需要再在其他地方申请内存,只需要在此对象后面连续申请(+/-)即可，也就是它的address会保持不变，但区域会变长或者变短。
 
 ### 不可变对象
 
