--- a/doc/内置函数与底层调用.md
+++ b/doc/内置函数与底层调用.md
@@ -88,7 +88,7 @@ typedef struct {
 以下是一个简单的 C 扩展模块示例：
 
 ```c
-#include <Python.h>
+[[include]] <Python.h>
 
 static PyObject* mymodule_hello(PyObject* self, PyObject* args) {
     const char* name;
@@ -197,7 +197,7 @@ Python 之所以能够直接使用 `filter` 这样的函数，并且这些函数
 首先，编写一个 C 文件 `mymodule.c`：
 
 ```c
-#include <Python.h>
+[[include]] <Python.h>
 
 // 定义一个简单的 C 函数
 static PyObject* mymodule_hello(PyObject* self, PyObject* args) {
