--- a/doc/类方法.MD
+++ b/doc/类方法.MD
@@ -24,7 +24,7 @@ class Car:
         make, model, year = car_info.split('-')
         return cls(make, model, int(year))
 
-#使用类方法创建Car实例
+[[使用类方法创建Car实例]]
 car_info = "Honda-Accord-2015"
 new_car = Car.from_string(car_info)
 # 访问实例属性
