--- a/doc/内存泄露.md
+++ b/doc/内存泄露.md
@@ -1,4 +1,4 @@
-当然，以下是一个详细的示例，展示了如何在Python中导致内存泄漏和OOM（Out Of Memory）异常。这个示例代码故意引入内存泄漏问题，以便展示如何可能导致OOM异常。
+当然，以下是一个详细的示例，展示了如何在Python中导致内存泄漏和OOM（Out Of Memory）异常。
 
 ### 示例代码：导致内存泄漏和OOM异常
 
@@ -6,9 +6,11 @@
 import gc
 import tracemalloc
 
+
 class LeakyClass:
     def __init__(self):
         self.data = [x for x in range(10000)]  # 大量占用内存的数据
+
 
 def create_leak():
     leaks = []
@@ -17,20 +19,22 @@ def create_leak():
         leaks.append(obj)
     return leaks
 
+
 def main():
     tracemalloc.start()  # 开始跟踪内存分配
     leaks = create_leak()
-    
+
     current, peak = tracemalloc.get_traced_memory()
-    print(f"当前内存使用: {current / 10**6} MB; 峰值内存使用: {peak / 10**6} MB")
-    
+    print(f"当前内存使用: {current / 10 ** 6} MB; 峰值内存使用: {peak / 10 ** 6} MB")
+
     del leaks  # 删除引用
     gc.collect()  # 强制垃圾回收
-    
+
     current, peak = tracemalloc.get_traced_memory()
-    print(f"垃圾回收后当前内存使用: {current / 10**6} MB; 峰值内存使用: {peak / 10**6} MB")
-    
+    print(f"垃圾回收后当前内存使用: {current / 10 ** 6} MB; 峰值内存使用: {peak / 10 ** 6} MB")
+
     tracemalloc.stop()  # 停止跟踪内存分配
+
 
 if __name__ == "__main__":
     main()
@@ -40,14 +44,15 @@ if __name__ == "__main__":
 
 1. **LeakyClass**: 这是一个简单的类，包含一个占用大量内存的列表 `self.data`。
 
-2. **create_leak**: 这个函数创建了100,000个 `LeakyClass` 对象，并将它们存储在一个列表 `leaks` 中。由于这些对象被存储在列表中，它们不会被垃圾回收，从而导致内存泄漏。
+2. **create_leak**: 这个函数创建了100,000个 `LeakyClass` 对象，并将它们存储在一个列表 `leaks`
+   中。由于这些对象被存储在列表中，它们不会被垃圾回收，从而导致内存泄漏。
 
-3. **main**: 
-   - 使用 `tracemalloc` 模块来跟踪内存分配。
-   - 调用 `create_leak` 函数来创建内存泄漏。
-   - 打印当前和峰值内存使用情况。
-   - 删除 `leaks` 列表的引用并强制进行垃圾回收。
-   - 再次打印内存使用情况，观察内存是否被释放。
+3. **main**:
+    - 使用 `tracemalloc` 模块来跟踪内存分配。
+    - 调用 `create_leak` 函数来创建内存泄漏。
+    - 打印当前和峰值内存使用情况。
+    - 删除 `leaks` 列表的引用并强制进行垃圾回收。
+    - 再次打印内存使用情况，观察内存是否被释放。
 
 ### 运行结果
 
@@ -71,9 +76,11 @@ import gc
 import tracemalloc
 import weakref
 
+
 class LeakyClass:
     def __init__(self):
         self.data = [x for x in range(10000)]
+
 
 def create_leak():
     leaks = weakref.WeakValueDictionary()
@@ -82,20 +89,22 @@ def create_leak():
         leaks[i] = obj
     return leaks
 
+
 def main():
     tracemalloc.start()
     leaks = create_leak()
-    
+
     current, peak = tracemalloc.get_traced_memory()
-    print(f"当前内存使用: {current / 10**6} MB; 峰值内存使用: {peak / 10**6} MB")
-    
+    print(f"当前内存使用: {current / 10 ** 6} MB; 峰值内存使用: {peak / 10 ** 6} MB")
+
     del leaks
     gc.collect()
-    
+
     current, peak = tracemalloc.get_traced_memory()
-    print(f"垃圾回收后当前内存使用: {current / 10**6} MB; 峰值内存使用: {peak / 10**6} MB")
-    
+    print(f"垃圾回收后当前内存使用: {current / 10 ** 6} MB; 峰值内存使用: {peak / 10 ** 6} MB")
+
     tracemalloc.stop()
+
 
 if __name__ == "__main__":
     main()
